<resources>
    <string name="app_name">Tip Time</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="okay_15">Okay (15%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="amazing_20">Amazing 20%</string>
    <string name="really_amazing">Really Amazing 30%</string>
    <string name="calculate">Calculate</string>
    <string name="grand_total">Grand Total: %s</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="wanted_total">Wanted Total</string>
    <string name="tab_1">Calculate Tip</string>
    <string name="tab_2">Tip From Total</string>
</resources>