<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".MainActivity">

        //adds the store icon/ moves it to the left of cost of service
        <ImageView
            android:id="@+id/icon_cost_of_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_store"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cost_of_service"
            app:layout_constraintBottom_toBottomOf="@+id/cost_of_service"
            />

        //allows user to enter the tip amount

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cost_of_service"
            style="@style/Widget.TipTime.TextView"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint="@string/cost_of_service"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/icon_cost_of_service"
            app:layout_constraintTop_toTopOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cost_of_service_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/icon_wanted_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_store"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wanted_total"
            app:layout_constraintBottom_toBottomOf="@+id/cost_of_service"
            />

        //allows user to enter the tip amount

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wanted_total"
            style="@style/Widget.TipTime.TextView"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint="@string/wanted_total"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/icon_wanted_total"
            app:layout_constraintTop_toBottomOf="@id/cost_of_service"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/wanted_total_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>


        //allows user to click calculate
        <Button
            android:id="@+id/calculate_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/wanted_total"
            app:layout_constraintTop_toBottomOf="@+id/wanted_total" />

        //shows tip amount
        <TextView
            android:id="@+id/tip_result"
            style="@style/Widget.TipTime.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Tip Amount: $10"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@id/calculate_button"
            app:layout_constraintTop_toBottomOf="@id/calculate_button"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>